# movicol-ai

./: .dockerignore  .env.example  .gitignore  .mega-linter.yml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  sonar-project.properties  test_osrm.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  megalinter.yml
app/: main.py
app/common/: congestion.py  exceptions.py  graph_loader.py
app/config/: settings.py
app/modules/agent/: router.py  schemas.py  service.py
app/modules/demand_prediction/: router.py  schemas.py  service.py  st_gat_inference.py
app/modules/graph/: router.py  schemas.py  service.py
app/modules/health/: router.py  service.py
app/modules/predictions/: gnn_inference.py  router.py  schemas.py  service.py
app/modules/route_prediction/: explainer.py  graph_data.py  router.py  schemas.py  service.py  tm_rutas_all.json  tm_stations_all.json
app/modules/siniestralidad/: __init__.py  router.py  schemas.py  service.py
app/scripts/: clean_graph.py  train_model.py
models/: aristas_infraestructura_gat.csv
scripts/: ingest_tm_geojson.py
tests/: test_agent.py  test_health.py  test_route_prediction.py
training/: config.yaml  train.py
