[project]
name = "movicol-ai"
version = "0.1.0"
description = "AI microservice for MoviCol - GNN predictions and conversational agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "networkx>=3.2",
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "geopandas>=0.14.0",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.14.0",
    "psycopg2-binary>=2.9.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
